tests/rosetta/out/Smalltalk/additive-primes.out
/tmp/additive-primes.st:14: parse error, expected ']'
