tests/rosetta/out/Smalltalk/additive-primes.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:35Z
"
| count d i isPrime line lineCount main pad s sumDigits x |
isPrime := [:n | ((n < 2)) ifTrue: [
  false
] .
(((n % 2) = 0)) ifTrue: [
  (n = 2)
] .
(((n % 3) = 0)) ifTrue: [
  (n = 3)
] .
d := 5.
[((d * d) <= n)] whileTrue: [
  (((n % d) = 0)) ifTrue: [
    false
  ] .
  d := (d + 2).
  (((n % d) = 0)) ifTrue: [
    false
  ] .
  d := (d + 4).
]
.
true ].
sumDigits := [:n | s := 0.
x := n.
[(x > 0)] whileTrue: [
  s := (s + (x % 10)).
  x := (x / 10) asInteger.
]
.
s ].
pad := [:n | ((n < 10)) ifTrue: [
  ('  ' + (n asString))
] .
((n < 100)) ifTrue: [
  (' ' + (n asString))
] .
(n asString) ].
main := [ | Transcript show: 'Additive primes less than 500:'; cr.
count := 0.
line := ''.
lineCount := 0.
i := 2.
[(i < 500)] whileTrue: [
  ((isPrime value: i and: [isPrime value: sumDigits value: i])) ifTrue: [
    count := (count + 1).
    line := ((line + pad value: i) + '  ').
    lineCount := (lineCount + 1).
    ((lineCount = 10)) ifTrue: [
      Transcript show: ((line copyFrom: 0 to: ((line size) - 2))) printString; cr.
      line := ''.
      lineCount := 0.
    ] .
  ] .
  ((i > 2)) ifTrue: [
    i := (i + 2).
  ] ifFalse: [
    i := (i + 1).
  ].
]
.
((lineCount > 0)) ifTrue: [
  Transcript show: ((line copyFrom: 0 to: ((line size) - 2))) printString; cr.
] .
Transcript show: (((count asString) + ' additive primes found.')) printString; cr. ].
main value.
